# citizeen_luk_up

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/data/: A LITTLE HEAVEN ON EARTH.xlsx  AIR FORCE PRIMARY SCHOOL.xlsx  AIR FORCE S S SCH.xlsx  ENTEBBE  SSS.xlsx  LAKE  VICTORIA SCHOOL.xlsx  data_controller.rs
src/fields/: mod.rs  name.rs  nin.rs
tests/: cli.rs
