[package]
name = "citzeen_luk_up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
clap = { version="4.2.7", features=["default", "derive"] }
calamine = "0.19.1"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
